# todos

./: LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt  todos.py  todos.sh
plans/: 2026-06-12-test-todos-py-bug-PLAN.md
src/todos/: __init__.py  cli.py  core.py  todos.py
src/tofix/: __init__.py  cli.py  core.py
tests/: _fixture_repo.py  conftest.py  test_todos.py
tools/: todos.sh
